--- a/startupweekendnantes.fr/src/components/Header.css
+++ b/startupweekendnantes.fr/src/components/Header.css
@@ -29,10 +29,12 @@
   display: inline-block;
   padding: 13px 25px;
   background: rgb(255, 255, 255);
-  color: rgb(0, 0, 238);
-  font-family: sans-serif;
-  font-weight: 400;
-  font-size: 12px;
+  color: rgb(25, 5, 50);
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
   text-decoration: none;
   border-radius: 4px;
   box-shadow: 0 5px 0 rgb(179, 179, 179);
